增加 任务描述，添加货品列表页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,9 @@
         <activity android:name=".ui.activity.LoginActivity" />
         <activity android:name=".ui.activity.ManifestListActivity" />
         <activity android:name=".ui.activity.ManifestDetailsActivity" />
-        <activity android:name=".ui.activity.IpChangeActivity"></activity>
+        <activity android:name=".ui.activity.IpChangeActivity" />
+        <activity android:name=".ui.activity.EditMessageActivity" />
+        <activity android:name=".ui.activity.GoodsListActivity"></activity>
     </application>
 
 </manifest>
