修改图片上传数量

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile files('libs/umeng-common-1.4.0.jar')
     compile files('libs/utdid4all-1.1.5.3_proguard.jar')
     compile files('libs/SecurityEnvSDK-release-1.0.0.jar')
+    compile 'com.android.support:support-v4:26.0.0-alpha1'
 }
